[package]
name = "str-concat"
version = "0.1.2"
authors = ["oberien <jaro.fietz@gmx.de>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/oberien/str-concat"
description = "Concatenate two adjacent string slices"
keywords = ["str", "concat", "concatenate", "string", "slice"]
readme = "README.md"

[dependencies]
